<resources>
    <string name="app_name">My Tasks</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="no_due_date"><![CDATA[<No due date>]]></string>
    <string name="request_api_authorization">Requesting API authorization</string>
    <string name="task_title_hint">Task title</string>
    <string name="label_add_button">Add</string>
    <string name="lists_menu_title">Lists</string>
    <string name="first_sync_progress_dialog">Fetching data</string>
    <string name="notifications_settings_title">Notifications</string>
    <string name="undo">UNDO</string>
    <string name="task_deleted">Task deleted</string>
    <string name="tasks_restored">Tasks restored</string>
    <string name="request_canceled">Request cancelled</string>
    <string name="g_services_not_available">Google Play Services is not available</string>
    <string name="task_not_found">Task not found</string>
    <string name="task_due_date_hint">No due date</string>
    <string name="new_task_title">New task</string>
    <string name="empty_title_error">The title can not be empty</string>
    <string name="notification_select">No reminders</string>
    <string name="task_notes_hint">No notes</string>
    <string name="no_internet_toast">No network connection available.</string>
    <string name="task_edit_title">Edit task</string>
    <string name="no_task_name"><![CDATA[<No title>]]></string>
    <string name="no_tasks_in_list">No tasks in this listId</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="bug_report_notification_title">Bug report captured, send to developer</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="overdue_append">(overdue)</string>
    <string name="task_updated">Task serverModify</string>
    <string name="task_reminder_notification_title">Task reminder</string>
    <string name="uncompleted_task_text">You have an uncompleted task set for</string>
    <string name="touch_for_details">tap for details</string>
    <string name="notification_dialog_title">Set notification</string>
    <string name="morning">In the morning</string>
    <string name="afternoon">In the afternoon</string>
    <string name="evening">In the evening</string>
    <string name="custom">Custom…</string>
    <string name="ok">OK</string>
    <string name="no_due_date_selected">No due date selected</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="app_intro1">This app allows you to create, read and modify your tasks in Google Tasks</string>
    <string name="app_intro2">To start, please add your Google account and grant the necessary permissions. If you have already created some tasks, you should see them right away</string>
    <string name="notification_info_hint">Date and time</string>
    <string name="repeat_hint">Select repeat mode</string>
    <string name="no_internet_warning">Changes made now will sync with Google Tasks once a connection has been established</string>
    <string name="no_internet_warning_title">No internet connection</string>
    <string name="please_wait">Please wait…</string>
    <string name="new_list">New listId</string>
    <string name="list_name_hint">List name</string>
    <string name="add_button">ADD</string>
    <string name="list_title_empty_toast">The listId title can not be empty</string>
    <string name="edit_list_menu_item">Edit listId</string>
    <string name="edit_button">edit</string>
    <string name="edit_list">Edit listId</string>
    <string name="delete_list_menu_item">Delete listId</string>
    <string name="confirmation_task_delete_message">Are you sure you want to delete this listId? You will lose all the tasks in it.\n\n<b>This action can not be undone</b></string>
    <string name="yes">Yes</string>
    <string name="requires_Google_Services_message">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app."</string>
    <string name="Google_Services_not_available_toast">Google Play Services is not available</string>
    <string name="error_toast">The following error occurred:\\n</string>
    <string name="welcome_title">WELCOME TO MY TASKS</string>
    <string name="contacts_permissions_rationale">This app needs permission to access your Google account in order work properly. Android groups this specific permission inside the Contacts permission group.\n\n<b>We will not actually access your contacts.</b></string>
    <string name="default_delete_list_message">The default listId cannot be deleted</string>
    <string name="daily_repeat_mode">Daily</string>
    <string name="one_time_repeat_mode">One time</string>
    <string name="weekdays">Weekdays</string>
    <string name="every">Every</string>
    <string name="of_every_month">of every month</string>
    <string name="on_day">On day</string>
    <string name="past_reminder_no_effect">The reminder has been set to a past date. It will have no effect</string>
    <string name="last_day_of_month">On the last day of every month</string>
    <string name="next_reminder">Next reminder: </string>
    <string name="same_day">The same day</string>
    <string name="day_before">The day before</string>
    <string name="week_before">The week before</string>
    <string name="custom_time">Custom…</string>
    <string name="date">Date</string>
    <string name="custom_suffix">Custom</string>
    <string name="select_date">Select the date</string>
    <string name="select_time">Select the time</string>
    <string name="select_repeat_mode">Select repeat mode</string>
    <string name="Delete">Delete</string>
    <string name="custom_date">Custom…</string>
    <string name="selected">selected</string>
    <string name="selected_plural">selected</string>
    <string name="change_lists">Change lists</string>
    <string name="cancelar">Cancelar</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="mondays">Mondays</string>
    <string name="tuesdays">Tuesdays</string>
    <string name="wednesdays">Wednesdays</string>
    <string name="thursdays">Thursdays</string>
    <string name="fridays">Fridays</string>
    <string name="saturdays">Saturdays</string>
    <string name="sundays">Sundays</string>
    <string name="mondayToggle">Mon</string>
    <string name="tuesdayToggle">Tue</string>
    <string name="wednesdayToggle">Wed</string>
    <string name="thursdayToggle">Thu</string>
    <string name="fridayToggle">Fri</string>
    <string name="saturdayToggle">Sat</string>
    <string name="sundayToggle">Sun</string>
    <string name="past_reminder_warning">Reminders set to a past date or past the due date will not be saved</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_ringtone_silent">ring tone silent</string>
    <string name="at">at</string>
    <string name="connected_account_pref_title">Connected account</string>
    <string name="settings_title">Settings</string>
    <string name="day_of_month_label">Day of month</string>
    <string name="reminder_set_past_due_date">The reminder is set past the due date</string>
    <string name="reminder_in_the_past">Reminders set to a past date would have no effect and hence will not be saved</string>
    <string name="morning_reminder_pref_title">Hour of morning reminders</string>
    <string name="afternoon_reminder_pref_title">Hour of afternoon reminders</string>
    <string name="evening_reminder_pref_title">Hour of evening reminders</string>
    <string name="save_task_on_back_pressed_pref_title">Save changes on back pressed</string>
    <string name="dont_save_task_on_back_pressed_summary">When editing or creating a task, changes made will be dismissed when pressing the back button</string>
    <string name="save_task_on_back_pressed_summary">When editing or creating a task, changes made will be saved when pressing the back button</string>
    <string name="reminders">Reminders</string>
    <string name="tone">Tone</string>
    <string name="vibrate">Vibrate</string>
    <string name="account_pref_title">Accounts</string>
    <string name="default_reminder_pref_title">Default reminder</string>
    <string name="default_reminder_pref_summary">If enabled, a reminder will fire at the predefined time on the task\'s due date (if any is set)</string>
    <string name="default_reminder_time_pref_title">Default reminder time</string>
    <string name="google_connection_failed">Connection to Google failed. Please try again</string>


    <string-array name="days_of_month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

</resources>
