<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/editList"
        android:orderInCategory="100"
        android:title="@string/edit_list_menu_item"
        app:showAsAction="never" />

    <item
        android:id="@+id/deleteList"
        android:orderInCategory="100"
        android:title="@string/delete_list_menu_item"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <!--<item-->
        <!--android:id="@+id/test_pref"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="Test preferences"-->
        <!--app:showAsAction="never" />-->
</menu>
