<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/noInternetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:padding="@dimen/full_margin"
        android:orientation="vertical"
        android:background="@color/warningBackground"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/full_margin"
                android:src="@drawable/ic_warning_black_24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/full_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/no_internet_warning_title"
                android:textStyle="bold" />

        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_warning"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/empty_data_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nothing_to_show"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_tasks_in_list"/>

    </LinearLayout>


    <android.support.v4.widget.SwipeRefreshLayout

        android:id="@+id/swipeRefresh"
        android:orientation="vertical"
        android:layout_below="@id/noInternetLayout"
        android:layout_height="match_parent"
        android:layout_alignWithParentIfMissing="true"
        android:layout_width="match_parent">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/colorPrimary"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/list_item">

        </android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>

