<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/full_margin">

    <LinearLayout
        android:id="@+id/same_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="@dimen/full_margin">

        <RadioButton
            android:id="@+id/rb_same_day"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_margin"
            android:layout_marginStart="@dimen/full_margin"
            android:text="@string/same_day"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_day_before"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="@dimen/full_margin">

        <RadioButton
            android:id="@+id/rb_day_before"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_margin"
            android:layout_marginStart="@dimen/full_margin"
            android:text="@string/day_before"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_week_before"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="@dimen/full_margin">

        <RadioButton
            android:id="@+id/rb_week_before"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_margin"
            android:layout_marginStart="@dimen/full_margin"
            android:text="@string/week_before"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_custom_date"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_custom_date"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/custom_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_margin"
            android:layout_marginStart="@dimen/full_margin"
            android:text="@string/custom"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    </LinearLayout>

</LinearLayout>